@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.4032 2003/12/09 11:30:52 drochner Exp $
+$NetBSD: CHANGES,v 1.4033 2003/12/09 12:54:58 abs Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -5043,3 +5043,5 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated gcc3 to 3.3.2 [drochner 2003-12-09]
 	Updated zope to 2.6.2 [drochner 2003-12-09]
 	Updated disc-cover to 1.5.4 [drochner 2003-12-09]
+	Updated pkgchk to 1.45 [abs 2003-12-09]
+
